--- a/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
@@ -1,13 +1,9 @@
 <div style="position: relative;">
-    <div class="modifier modifier_0 {{modifier_0_classes}}" style="display: none; left: {{modifier_0_left}}px;">
-        {{{modifier_0_html}}}
+    {{#each modifiers}}
+    <div class="modifier {{classes}}" style="left: {{left}}px; top: {{top}}px;">
+        {{{html}}}
     </div>
-    <div class="modifier modifier_1 {{modifier_1_classes}}" style="display: none; left: {{modifier_1_left}}px;">
-        {{{modifier_1_html}}}
-    </div>
-    <div class="modifier modifier_2 {{modifier_2_classes}}" style="display: none; left: {{modifier_2_left}}px;">
-        {{{modifier_2_html}}}
-    </div>
+    {{/each}}
     <div id="map_enemy_visual_{{id}}" class="{{selection_classes_base}} {{selection_classes}}">
         <div class="{{main_visual_outer_classes}}" style="width: {{outer_width}}; height: {{outer_height}};">
             <div class="{{main_visual_inner_classes}}" style="width: {{inner_width}}; height: {{inner_height}}; margin:{{margin}}px;
