#207 Added display of truesight enemies.
The actual visual needs some more work but the rest is done.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -540,6 +540,10 @@ html, body, #map, #app, .wrapper {
     background-image: url('/images/enemyclassifications/elite.png') !important;
 }
 
+.truesight {
+    background-image: url('/images/enemymodifiers/truesight.png') !important;
+}
+
 
 /*.enemy_icon_npc_type.beguiling {*/
 /*    border: #7f2480 2px solid !important;*/
