--- a/resources/assets/js/handlebars/map_enemy_visuals_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_visuals_template.handlebars
@@ -2,9 +2,11 @@
     <div id="map_enemy_visuals" class="form-group">
         <div class="font-weight-bold">{{ enemy_display_type_label }}:</div>
         <select id="map_enemy_visuals_dropdown" class="form-control selectpicker" name="map_enemy_visuals_dropdown">
-            <option value="npc_class">{{ npc_class_label }}</option>
-            <option value="npc_type">{{ npc_type_label }}</option>
-            <option value="enemy_forces">{{ enemy_forces_label }}</option>
+            {{#select enemy_visual_type}}
+                <option value="npc_class">{{ npc_class_label }}</option>
+                <option value="npc_type">{{ npc_type_label }}</option>
+                <option value="enemy_forces">{{ enemy_forces_label }}</option>
+            {{/select}}
         </select>
     </div>
 
