--- a/resources/assets/js/handlebars/map_map_icon_select_option_template.handlebars
+++ b/resources/assets/js/handlebars/map_map_icon_select_option_template.handlebars
@@ -1,8 +1,3 @@
-<div class="row no-gutters">
-    <div class="col-3">
-        <img src="/images/mapicon/{{key}}.png"/>
-    </div>
-    <div class="col-9">
-        {{name}}
-    </div>
+<div class="">
+    <img src="/images/mapicon/{{key}}.png"/> {{name}}
 </div>
