--- a/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
@@ -4,7 +4,7 @@
         {{{html}}}
     </div>
     {{/each}}
-    <div id="map_enemy_visual_{{id}}" class="{{selection_classes_base}} {{selection_classes}}">
+    <div id="map_enemy_visual_{{id}}" class="{{selection_classes_base}} {{selection_classes}}" style="width: {{outer_width}}; height: {{outer_height}};">
         <div class="{{main_visual_outer_classes}}" style="width: {{outer_width}}; height: {{outer_height}};">
             <div class="{{main_visual_inner_classes}}" style="width: {{inner_width}}; height: {{inner_height}}; margin:{{margin}}px;
                     ">
