--- a/resources/assets/js/handlebars/map_controls_template.handlebars
+++ b/resources/assets/js/handlebars/map_controls_template.handlebars
@@ -1,11 +1,26 @@
 <div id="map_controls" class="leaflet-draw-section">
     <div class="leaflet-draw-toolbar leaflet-bar leaflet-draw-toolbar-top">
-        {{#mapobjectgroups}}
         <a id='map_controls_hide_{{name}}' class="map_controls_custom" href="#" title="{{title}}">
             <i id='map_controls_hide_{{name}}_checkbox' class="fas fa-check-square" style="width: 15px"></i>
             <i class="fas {{fa_class}}" style="width: 15px"></i>
             <span class="sr-only">{{title}}</span>
         </a>
+        {{#mapobjectgroups}}
+            {{#ifEquals name "mapicon"}}
+                <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Dropdown
+                </button>
+                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                    <a class="dropdown-item" href="#">Dropdown link</a>
+                    <a class="dropdown-item" href="#">Dropdown link</a>
+                </div>
+            {{else}}
+                <a id='map_controls_hide_{{name}}' class="map_controls_custom" href="#" title="{{title}}">
+                    <i id='map_controls_hide_{{name}}_checkbox' class="fas fa-check-square" style="width: 15px"></i>
+                    <i class="fas {{fa_class}}" style="width: 15px"></i>
+                    <span class="sr-only">{{title}}</span>
+                </a>
+            {{/ifEquals}}
         {{/mapobjectgroups}}
     </div>
     <ul class="leaflet-draw-actions"></ul>
