#255 Fixed remaining issues with placing map icons.
Popups pop up when they should, you can only select things when you should be able to etc.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -690,6 +690,7 @@ html, body, #map, #app, .wrapper {
 }
 
 .map_map_icon_comment_tooltip {
+    min-width: 150px;
     max-width: 240px;
     white-space: normal;
     display: inline-block;
