--- a/resources/assets/js/handlebars/map_enemy_visuals_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_visuals_template.handlebars
@@ -6,6 +6,7 @@
                 <option value="npc_class">{{ npc_class_label }}</option>
                 <option value="npc_type">{{ npc_type_label }}</option>
                 <option value="enemy_forces">{{ enemy_forces_label }}</option>
+                <option value="enemy_portrait">{{ enemy_portrait_label }}</option>
             {{/select}}
         </select>
     </div>
