--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -438,6 +438,10 @@ html, body, #map, #app, .wrapper {
     background-color: hotpink;
 }
 
+.enemy_icon.mdt.coupled {
+    background-color: green;
+}
+
 /*
  * Enemy types
  */
