#116 WIP killzone sidebar shenanigans.

--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_template.handlebars
@@ -1,7 +1,12 @@
-<div class="row">
+<div id="map_killzonessidebar_killzone_{{id}}" class="row no-gutters mb-2 map_killzonessidebar_killzone" data-id="{{id}}">
     <div class="col">
-        <div class="alert alert-info" style="background-color: {{color}}">
-            Killzone!
+        <div class="h-100 text-center" style="background-color: {{color}}">
+            {{text}}
+        </div>
+    </div>
+    <div class="col" style="-ms-flex: 0 0 40px; flex: 0 0 40px;">
+        <div class="btn btn-warning">
+            <i class="fa fa-trash"></i>
         </div>
     </div>
 </div>
