--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -152,6 +152,17 @@ html, body, #map, #app, .wrapper {
     margin: 4px;
 }
 
+#killzonesidebar .map_killzonessidebar_killzone {
+    cursor: pointer;
+    padding: 6px;
+}
+
+#killzonesidebar .map_killzonessidebar_killzone.selected {
+    border: #DF691A 3px solid;
+
+    padding: 3px;
+}
+
 #edit_route_echo_members_container .list-group-item,
 #edit_route_echo_status_container .list-group-item {
     background-color: inherit;
