#116 Rewrote killzone enemy selection. If you select a killzone from the right bar, left clicking will add said enemy to your pull, even when it's already part of your current pull.
Raid marker selection has been moved to context menu (right click)

--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_template.handlebars
@@ -1,6 +1,6 @@
 <div id="map_killzonessidebar_killzone_{{id}}" class="row no-gutters mb-2 map_killzonessidebar_killzone" data-id="{{id}}">
     <div class="col">
-        <div class="h-100 text-center" style="background-color: {{color}}">
+        <div class="h-100 text-center {{text-class}}" style="background-color: {{color}}">
             {{text}}
         </div>
     </div>
