--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -33,3 +33,5 @@
 // Noty
 @import "~noty/src/noty.scss";
 @import "~noty/src/themes/bootstrap-v4.scss";
+// Pickr
+@import "~@simonwep/pickr/dist/themes/nano.min.css";
