--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_template.handlebars
@@ -1,12 +1,12 @@
 <div id="map_killzonessidebar_killzone_{{id}}" class="mb-2 map_killzonessidebar_killzone" data-id="{{id}}">
-    <div class="row no-gutters map_killzonessidebar_killzone_selectable">
-        <div class="col">
+    <div class="row no-gutters">
+        <div class="col selectable">
             <div id="map_killzonessidebar_killzone_{{id}}_text" class="h-100 text-center {{text-class}}">
 
             </div>
         </div>
         <div class="col" style="-ms-flex: 0 0 40px; flex: 0 0 40px;">
-            <div class="btn btn-warning">
+            <div id="map_killzonessidebar_killzone_{{id}}_delete" class="btn btn-warning">
                 <i class="fa fa-trash"></i>
             </div>
         </div>
