--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_template.handlebars
@@ -1,23 +1,44 @@
 <div id="map_killzonessidebar_killzone_{{id}}" class="form-group map_killzonessidebar_killzone" data-id="{{id}}">
     <div class="card">
         <div class="card-body">
-            <h5 id="map_killzonessidebar_killzone_{{id}}_text" class="card-title selectable {{text-class}}">
+            <div class="row mb-1">
+                <div class="col">
+                    <div class="input-group">
+                        <div class="input-group-append selectable mr-1">
+                            <h5 id="map_killzonessidebar_killzone_{{id}}_text"
+                                class="card-title map_killzonessidebar_killzone_text {{text-class}}">
 
-            </h5>
-            <div class="input-group">
-                <div id="map_killzonessidebar_killzone_{{id}}_color"
-                     class="btn map_killzonessidebar_color_btn w-100">
+                            </h5>
+                        </div>
+                        <div class="input-group-append">
+                            <button id="map_killzonessidebar_killzone_{{id}}_expand" type="button"
+                                    class="btn btn-primary collapsed" aria-pressed="false" data-toggle="collapse"
+                                    data-target="#map_killzonessidebar_killzone_{{id}}_toggle_target">
+                                <i class="fa" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="map_killzonessidebar_killzone_{{id}}_toggle_target" class="collapse">
+                <div id="map_killzonessidebar_killzone_{{id}}_enemy_list" class="input-group mb-1">
+                    Enemy list!
+                </div>
+                <div class="input-group">
+                    <div id="map_killzonessidebar_killzone_{{id}}_color"
+                         class="btn map_killzonessidebar_color_btn w-100">
 
-                </div>
-                <div class="input-group-append">
-                    <button id="map_killzonessidebar_killzone_{{id}}_has_killzone"
-                            class="btn btn-primary" data-toggle="button" aria-pressed="false">
-                        <i class="fas fa-bullseye"></i>
-                    </button>
-                </div>
-                <div class="input-group-append">
-                    <div id="map_killzonessidebar_killzone_{{id}}_delete" class="btn btn-warning">
-                        <i class="fa fa-trash"></i>
+                    </div>
+                    <div class="input-group-append">
+                        <button id="map_killzonessidebar_killzone_{{id}}_has_killzone"
+                                class="btn btn-primary" data-toggle="button" aria-pressed="false">
+                            <i class="fas fa-bullseye"></i>
+                        </button>
+                    </div>
+                    <div class="input-group-append">
+                        <div id="map_killzonessidebar_killzone_{{id}}_delete" class="btn btn-warning">
+                            <i class="fa fa-trash"></i>
+                        </div>
                     </div>
                 </div>
             </div>
