#116 Added some more details to the individual pulls including dangerous enemy marker

--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_template.handlebars
@@ -5,7 +5,7 @@
                 <div class="col">
                     <div class="input-group">
                         <div class="input-group-append selectable mr-1">
-                            <h5 id="map_killzonessidebar_killzone_{{id}}_text"
+                            <h5 id="map_killzonessidebar_killzone_{{id}}_title"
                                 class="card-title map_killzonessidebar_killzone_text {{text-class}}">
 
                             </h5>
@@ -22,7 +22,7 @@
             </div>
             <div id="map_killzonessidebar_killzone_{{id}}_toggle_target" class="collapse">
                 <div id="map_killzonessidebar_killzone_{{id}}_enemy_list" class="input-group mb-1">
-                    Enemy list!
+
                 </div>
                 <div class="input-group">
                     <div id="map_killzonessidebar_killzone_{{id}}_color"
