Aggressiveness is now the background color, killzone color is now the border color.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -531,19 +531,19 @@ html, body, #map, #app, .wrapper {
 .enemy_icon_npc_enemy_forces.aggressive,
 .enemy_icon_npc_class.aggressive,
 .enemy_icon_npc_type.aggressive {
-    border-color: #dc3c3c;
+    background-color: #dc3c3c !important;
 }
 
 .enemy_icon_npc_enemy_forces.neutral,
 .enemy_icon_npc_class.neutral,
 .enemy_icon_npc_type.neutral {
-    border-color: #cccc2d !important;
+    background-color: #cccc2d !important;
 }
 
 .enemy_icon_npc_enemy_forces.unfriendly,
 .enemy_icon_npc_class.unfriendly,
 .enemy_icon_npc_type.unfriendly {
-    border-color: #ff9900 !important;
+    background-color: #ff9900 !important;
 }
 
 .enemy_icon_npc_enemy_forces.friendly,
