#116 Killzones now persist across different floors.

--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_template.handlebars
@@ -12,7 +12,7 @@
                         </div>
                         <div class="input-group-append">
                             <button id="map_killzonessidebar_killzone_{{id}}_expand" type="button"
-                                    class="btn btn-primary collapsed" aria-pressed="false" data-toggle="collapse"
+                                    class="btn collapsed" aria-pressed="false" data-toggle="collapse"
                                     data-target="#map_killzonessidebar_killzone_{{id}}_toggle_target">
                                 <i class="fa" aria-hidden="true"></i>
                             </button>
