#116 Changed background color of selected pulls and made more space colored

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -162,7 +162,7 @@ html, body, #map, #app, .wrapper {
     /*padding: 6px;*/
 }
 
-#killzonesidebar .selectable {
+#killzonesidebar .map_killzonessidebar_killzone_fill_space {
     flex: 1 1 auto
 }
 
