--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_template.handlebars
@@ -1,10 +1,10 @@
 <div id="map_killzonessidebar_killzone_{{id}}" class="form-group map_killzonessidebar_killzone" data-id="{{id}}">
     <div class="card">
-        <div class="card-body">
+        <div class="card-body selectable">
             <div class="row mb-1">
                 <div class="col">
                     <div class="input-group">
-                        <div class="input-group-append selectable mr-1">
+                        <div class="input-group-append mr-1 map_killzonessidebar_killzone_fill_space">
                             <h5 id="map_killzonessidebar_killzone_{{id}}_title"
                                 class="card-title map_killzonessidebar_killzone_text {{text-class}}">
 
